Use standard Java methods instead of Commons/Guava where possible