@@ -1,10 +1,9 @@
 package de.prob.util;
 
 import java.util.List;
+import java.util.Objects;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-
-import org.apache.commons.lang.builder.HashCodeBuilder;
 
 public class Tuple2<S, T> {
 	private final S first;
@@ -28,33 +27,33 @@ public class Tuple2<S, T> {
 		return "(" + first + "," + second + ")";
 	}
 
-	@SuppressWarnings("rawtypes")
 	@SuppressFBWarnings(value = "EQ_CHECK_FOR_OPERAND_NOT_COMPATIBLE_WITH_THIS", justification = "We actually want to compare Tuples with Lists that have 2 elements")
 	@Override
-	public boolean equals(Object that) {
-		if (that instanceof Tuple2<?, ?>) {
-			return this.first.equals(((Tuple2) that).getFirst())
-					&& this.second.equals(((Tuple2) that).getSecond());
+	public boolean equals(final Object obj) {
+		if (this == obj) {
+			return true;
 		}
-		if (that instanceof List<?>) {
-			List<?> list = (List<?>) that;
+		if (obj == null) {
+			return false;
+		}
+		// FIXME Is this even a good idea? This makes equals not commutative (aTuple.equals(aList) != aList.equals(aTuple)).
+		// Note: If this branch is removed, please also remove the @SuppressFBWarnings annotation above.
+		if (obj instanceof List<?>) {
+			final List<?> list = (List<?>)obj;
 			if (list.size() == 2) {
-				Object first = list.get(0);
-				Object second = list.get(1);
-				return this.first.equals(first) && this.second.equals(second);
+				return Objects.equals(this.getFirst(), list.get(0)) && Objects.equals(this.getSecond(), list.get(1));
 			}
 		}
-		return false;
+		if (this.getClass() != obj.getClass()) {
+			return false;
+		}
+		final Tuple2<?, ?> other = (Tuple2<?, ?>)obj;
+		return Objects.equals(this.getFirst(), other.getFirst())
+				&& Objects.equals(this.getSecond(), other.getSecond());
 	}
-	
 	
 	@Override
 	public int hashCode() {
-		HashCodeBuilder hcb = new HashCodeBuilder();
-		hcb.append(getFirst());
-		hcb.append(getSecond());
-		return hcb.toHashCode();
+		return Objects.hash(this.getFirst(), this.getSecond());
 	}
-	
-	
 }
